dev/non_executable_reasons_record_from_random_10k/2302.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
from __future__ import print_function
import numpy as np
from SimPEG import Mesh
from SimPEG import Problem
from SimPEG import Survey
from SimPEG import DataMisfit
from SimPEG import Directives
from SimPEG import Optimization
from SimPEG import Regularization
from SimPEG import InvProblem
from SimPEG import Inversion
from SimPEG import Maps
import matplotlib.pyplot as plt
%pylab inline
------------------

[0;36m  File [0;32m"<ipython-input-1-c01d735642e6>"[0;36m, line [0;32m6[0m
[0;31m    from SimPEG import Problem[0m
[0m           ^[0m
[0;31mSyntaxError[0m[0;31m:[0m from __future__ imports must occur at the beginning of the file

SyntaxError: from __future__ imports must occur at the beginning of the file (<ipython-input-1-c01d735642e6>, line 6)

Executability                            : False
